Add testplan description

--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -75,6 +75,12 @@ Vi förväntar oss att användarna har spelat enkla flash-spel förut och klarar av 
 
 
 \section{Testplan}
+Vi vill använda oss mest av användartester, för att se hur enkelt det är att förstå spelet och hur vi kan göra det roligare och väl balanserat. 
+
+Sen tänker vi också skriva lite unit-tester för bland annat kollisioner och annan logik som är enkel att testa.
+
+Vi vill att användarna ska genomföra 2 tester. 
+
 
 
 \section{Programdesign}
