--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -10,6 +10,8 @@
 \usepackage{bbm}
 \usepackage{graphicx}
 
+\DeclareGraphicsExtensions{.png,.pdf,.jpg}
+
 \textheight=24.0cm
 \textwidth=15.1cm
 
@@ -72,7 +74,14 @@ Vi riktar oss mot andra studenter och spelintresserade som vill ha ett kul tidsf
 Vi förväntar oss att användarna har spelat enkla flash-spel förut och klarar av att navigera i en simpel meny. Inte så mycket alltså.
 
 \section{Användarscenarion}
-
+Två användare sitter efter lunch och har inget att göra, så de bestämmer sig för att spela vårt spel. De sätter sig vid en dator och startar en spelomgång. Vid datorns tangentbord har de varsin uppsättning knappar för att navigera och skjuta. Efter att ha skjutit och rammat varandra ett tag så får en av användarna slut på hitpoints och hans skepp sjunker och han förlorar. Efter matchen frågar programmet om de vill köra en till omgång men användarna bestämmer sig för att göra något annat så de stänger ner programmet.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\textwidth , angle=270]{Bilder/Meny}
+	%\caption{Spelets huvudmeny}
+	\includegraphics[width=0.3\textwidth , angle=270]{Bilder/Game}
+	\caption{Huvudmeny och spelplan}
+\end{figure}
 
 \section{Testplan}
 
