--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -90,7 +90,17 @@ Sen tänker vi också skriva lite unit-tester för bland annat kollisioner och anna
 
 Vi vill att användarna ska genomföra 2 tester. 
 
+\subsection{Användartester}
 
+Användare ska utan tidigare kunskap om programmet kunna utföra följande scenarion utan större svårigheter.
+
+\subsubsection{Scenario 1}
+
+Användaren ska kunna navigera huvudmenyn för och ändra spelets inställningar. Användaren ska förstå vad inställningarna betyder och vad deras ändringar gör.
+
+\subsubsection{Scenario 2}
+
+Användaren ska kunna starta en spelomgång och spela utan att vara förhindrad av okunskap gällande spelets regler och kontroller.
 
 \section{Programdesign}
 
@@ -100,5 +110,8 @@ Vi vill att användarna ska genomföra 2 tester.
 
 \section{Tidsplan}
 
+För tillfället har vi delat upp vår tid med projektet i tre perioder. Period 1 är dagarna mellan övningen fredagen 08/05 och övningen onsdagen 13/05, period 2 är från 13/05 till söndagen 17/05 och period 3 är från måndagen 18/05 till sista övningen 22/05.
+
+Under första perioden vill vi skapa en körbar alphaverison. Denna version vill vi sedan användartesta under period 2 för att få feedback. I period 3 vill vi sedan använda feedbacken för att göra en slutgiltig verison.
 
 \end{document}
