Add a few technical specifications

--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -68,12 +68,12 @@ Spelets syfte är att vara ett kul socialt tidsfördriv.
 
 Vi har valt att göra detta spel, då vi minns från vår ungdoms dagar hur roligt det var att spela flashspelet ''achtung die kurve'' och vill återskapa glädjen av att sitta ett gäng kompisar runt en dator och skrika på varandra.
 
-\section{Användare}
+\section{Användarbeskrivning}
 Vi riktar oss mot andra studenter och spelintresserade som vill ha ett kul tidsfördriv.
 
 Vi förväntar oss att användarna har spelat enkla flash-spel förut och klarar av att navigera i en simpel meny. Inte så mycket alltså.
 
-\section{Användarscenarion}
+\section{Användarscenarier}
 Två användare sitter efter lunch och har inget att göra, så de bestämmer sig för att spela vårt spel. De sätter sig vid en dator och startar en spelomgång. Vid datorns tangentbord har de varsin uppsättning knappar för att navigera och skjuta. Efter att ha skjutit och rammat varandra ett tag så får en av användarna slut på hitpoints och hans skepp sjunker och han förlorar. Efter matchen frågar programmet om de vill köra en till omgång men användarna bestämmer sig för att göra något annat så de stänger ner programmet.
 \begin{figure}[h!]
 	\centering
@@ -106,7 +106,10 @@ Användaren ska kunna starta en spelomgång och spela utan att vara förhindrad av 
 
 
 \section{Tekniska specifikationer}
-
+	\begin{itemize}
+		\item Spelet ska kunna hantera olika framerates.
+		\item Spelarnas båtar ska accelerera/deaccelerera.
+	\end{itemize}
 
 \section{Tidsplan}
 
