Crop and rename Program_Flow

--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -104,6 +104,12 @@ Användaren ska kunna starta en spelomgång och spela utan att vara förhindrad av 
 
 \section{Programdesign}
 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Bilder/Class-diagram}
+	\includegraphics[width=0.3\textwidth]{Bilder/Program_Flow}
+	\caption{Klassdiagram och programflödesschema}
+\end{figure}
 
 \section{Tekniska specifikationer}
 
