Add more technical specification

--- a/Rapport/Projektplan.tex
+++ b/Rapport/Projektplan.tex
@@ -115,6 +115,7 @@ Användaren ska kunna starta en spelomgång och spela utan att vara förhindrad av 
 	\begin{itemize}
 		\item Spelet ska kunna hantera olika framerates.
 		\item Spelarnas båtar ska accelerera/deaccelerera.
+		\item Spelet ska ha ett poängsystem.
 	\end{itemize}
 
 \section{Tidsplan}
